fix: appropriate markdown table styles for dark mode

--- a/source/assets/style/components/syntax/index.less
+++ b/source/assets/style/components/syntax/index.less
@@ -31,6 +31,20 @@
 		background: @code-background;
 		color: @root-color;
 	}
+
+	table {
+		tr {
+			color: @root-color;
+			border-top: 1px solid #373c40;
+			background: transparent;
+			&:nth-child(2n) {
+				background: @sidebar-bg-hl;
+			}
+		}
+		td, th {
+			border: 1px solid #373c40;
+		}
+	}
 }
 
 .markdown {
